# vertex-proxy

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
examples/: claude-code-env.sh  hermes-config-snippet.yaml  systemd.service
launchd/: ai.hermes.vertex-proxy.plist.template  install.sh
tests/: test_config.py  test_routing.py
vertex_proxy/: __init__.py  __main__.py  auth.py  config.py  main.py
