[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vertex-proxy"
version = "0.1.0"
description = "Anthropic + Gemini API-compatible proxy for Google Cloud Vertex AI. Bridges static-URL API consumers to Vertex AI's service-account auth."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Prasad Subrahmanya", email = "prasad@luminik.io" },
]
keywords = ["anthropic", "claude", "vertex-ai", "gemini", "proxy", "llm", "gcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "google-auth>=2.28",
    "requests>=2.31",
    "httpx>=0.26",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[project.scripts]
vertex-proxy = "vertex_proxy.__main__:main"

[project.urls]
Homepage = "https://github.com/prasadus92/vertex-proxy"
Author = "https://prasad.tech"
Issues = "https://github.com/prasadus92/vertex-proxy/issues"
Changelog = "https://github.com/prasadus92/vertex-proxy/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["vertex_proxy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line-too-long — handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
